<resources>
    <string name="app_name">Flexxo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_db_title">MOVIE DB APP</string>
    <string name="categories_title">Categories</string>
    <string name="search_movies_hint">Search for Movies</string>
    <string name="title">Title:</string>
    <string name="release_date_title">Release Date:</string>
    <string name="movie_detail_release_date_title">Release Date</string>
    <string name="flexoo_title">Flexoo Watch</string>
    <string name="about_movies_title">About Movies</string>
    <string name="overview_title">Overview</string>
    <string name="popularity_title">Popularity</string>
    <string name="rate_count_title">Rate Count</string>
    <string name="average_rating_title">Average Rating:</string>
    <string name="movie_detail_average_rating_title">Average Rating</string>
    <string name="search_results_title">Search Results:</string>
    <string name="homescreen_title_home">Home</string>
    <string name="homescreen_latest_movie_title">Latest Movies</string>
    <string name="homescreen_top_rated_movies_title">Top Rates Movies</string>
    <string name="homescreen_upcoming_movies_title">Upcoming Movies</string>
    <string name="cast_title">Cast</string>
    <string name="movie_release_date">%1$s on %2$s</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="recommended_movies">Recommened Movies</string>
</resources>