<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.homeFragment.HomeFragmentV2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivOpenMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_home_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitleHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/homescreen_title_home"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ivOpenMenu"
            app:layout_constraintStart_toEndOf="@id/ivOpenMenu"
            app:layout_constraintTop_toTopOf="@id/ivOpenMenu" />

        <TextView
            android:id="@+id/svMovies"
            style="@style/Seachview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:padding="10dp"
            android:text="@string/search_movies_hint"
            android:textAlignment="center"
            android:textColor="#7F7D7D"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleHome"
            app:layout_goneMarginTop="24dp" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@id/svMovies"
            app:layout_constraintEnd_toEndOf="@id/svMovies"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@id/svMovies"
            app:layout_constraintTop_toTopOf="@id/svMovies"
            app:tint="#7F7D7D" />

        <TextView
            android:id="@+id/tvLatestMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/homescreen_latest_movie_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLatestMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutAnimation="@anim/layout_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvLatestMovies"
            app:layout_constraintTop_toBottomOf="@id/tvLatestMovies" />

        <TextView
            android:id="@+id/tvTopRatedMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/homescreen_top_rated_movies_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvLatestMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopRatedMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutAnimation="@anim/layout_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvTopRatedMovies"
            app:layout_constraintTop_toBottomOf="@id/tvTopRatedMovies" />


        <TextView
            android:id="@+id/tvUpComingMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/homescreen_latest_movie_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvTopRatedMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpComingMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutAnimation="@anim/layout_animation"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvUpComingMovies"
            app:layout_constraintTop_toBottomOf="@id/tvUpComingMovies" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
