<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivMovieImage"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedCornerImageView"
        android:src="@drawable/ic_launcher_background" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TitleTextViewstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@id/ivMovieImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMovieName"
        style="@style/MovieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@id/guidelineForTexts"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/ivMovieImage"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="Avengers End Game" />

    <TextView
        android:id="@+id/tvReleaseDateTitle"
        style="@style/ReleaseDateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/release_date_title"
        app:layout_constraintEnd_toEndOf="@id/guidelineForTexts"
        app:layout_constraintStart_toEndOf="@id/ivMovieImage"
        app:layout_constraintTop_toBottomOf="@id/tvMovieName" />

    <TextView
        android:id="@+id/tvReleaseDate"
        style="@style/ReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineForTexts"
        app:layout_constraintStart_toEndOf="@id/ivMovieImage"
        app:layout_constraintTop_toBottomOf="@id/tvReleaseDateTitle"
        tools:text="2019-02-22" />

    <TextView
        android:id="@+id/tvAverageRatingTitle"
        style="@style/AverageRatingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/average_rating_title"
        app:layout_constraintEnd_toEndOf="@id/guidelineForTexts"
        app:layout_constraintStart_toEndOf="@id/ivMovieImage"
        app:layout_constraintTop_toBottomOf="@id/tvReleaseDate" />

    <TextView
        android:id="@+id/tvAverageRating"
        style="@style/AverageRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineForTexts"
        app:layout_constraintStart_toEndOf="@id/ivMovieImage"
        app:layout_constraintTop_toBottomOf="@id/tvAverageRatingTitle"
        tools:text="9.3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineForTexts"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>