<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".ui.fragments.homeFragment.HomeFragment">

    <TextView
        android:id="@+id/tvMovieDbTitle"
        style="@style/MovieDbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flexoo_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tvFindMovieSearchTitle"
        style="@style/FindYourMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="Find your movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieDbTitle" />

    <TextView
        android:id="@+id/svMovies"
        style="@style/Seachview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/search_movies_hint"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvFindMovieSearchTitle"
        app:layout_constraintTop_toBottomOf="@id/tvFindMovieSearchTitle" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@id/svMovies"
        app:layout_constraintEnd_toEndOf="@id/svMovies"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/svMovies"
        app:layout_constraintTop_toTopOf="@id/svMovies" />

    <TextView
        android:id="@+id/tvCategories"
        style="@style/CategoriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/categories_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svMovies" />

    <TextView
        android:id="@+id/btnTopRated"
        style="@style/TopRatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Top Rated"
        app:layout_constraintEnd_toStartOf="@+id/btnUpComing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategories" />

    <TextView
        android:id="@+id/btnPopular"
        style="@style/PopularButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Popular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnUpComing"
        app:layout_constraintTop_toBottomOf="@id/tvCategories" />

    <TextView
        android:id="@+id/btnUpComing"
        style="@style/UpComingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Up Coming"
        app:layout_constraintEnd_toStartOf="@+id/btnPopular"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTopRated"
        app:layout_constraintTop_toBottomOf="@id/tvCategories" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPopular" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPopular"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_movie" />


</androidx.constraintlayout.widget.ConstraintLayout>