<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movieDetailsConstraintLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.movieDetailFragment.MovieDetailFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivPosterImage, ivBackImage, tvRating, tvReleaseDate, tvMovieTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBackImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <ImageView
        android:id="@+id/ivPosterImage"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="40dp"
        android:src="@color/color_secondary"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:drawableEnd="@drawable/ic_star"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tvReleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMovieTitle"
        tools:text="7.4" />

    <TextView
        android:id="@+id/tvMovieTitle"
        style="@style/MovieDbTitleInDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/tvRating"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/ivPosterImage"
        app:layout_constraintTop_toBottomOf="@id/ivBackImage"
        tools:text="SpiderMan No Way HomeComming dfgfdg fdgdfg dfg dfg fdg dfg  gdfg df dfg df dfg df" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvMovieTitle"
        app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
        tools:text="Released on 25-11-23" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvMovieTitle, ivPosterImage, tvReleaseDate" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tvOverviewTitle, tvOverview, tvCastTitle, rvCast, tvSimilarMovies, rvSimilarMovies, shimmerSimilarMovies, tvRecommendedMovies, rvRecommendedMovies, shimmerRecommendedMovies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvOverviewTitle"
                style="@style/FindYourMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/overview_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvOverview"
                style="@style/OverViewText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverviewTitle"
                tools:text="From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government, undertaking high-risk black ops missions in exchange for commuted prison sentences." />

            <TextView
                android:id="@+id/tvCastTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/cast_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCastTitle"
                tools:listitem="@layout/item_cast" />

            <TextView
                android:id="@+id/tvSimilarMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/similar_movies"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvCast" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerSimilarMovies"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvSimilarMovies"
                app:layout_constraintTop_toBottomOf="@id/tvSimilarMovies"
                app:shimmer_repeat_mode="restart"
                app:shimmer_shape="radial">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSimilarMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layoutAnimation="@anim/layout_animation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvSimilarMovies"
                app:layout_constraintTop_toBottomOf="@id/tvSimilarMovies" />


            <TextView
                android:id="@+id/tvRecommendedMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/recommended_movies"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvSimilarMovies" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerRecommendedMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvRecommendedMovies"
                app:layout_constraintTop_toBottomOf="@id/tvRecommendedMovies"
                app:shimmer_repeat_mode="restart"
                app:shimmer_shape="radial">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />

                    <include layout="@layout/item_movie_placeholder" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecommendedMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layoutAnimation="@anim/layout_animation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvRecommendedMovies"
                app:layout_constraintTop_toBottomOf="@id/tvRecommendedMovies" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>